add_executable(Test testMain.cpp)
target_link_directories(Test PUBLIC ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
if (INCLUDE_GRAPHS)
    target_link_libraries(Test PUBLIC Graphs)
    target_compile_definitions(Test PUBLIC TEST_GRAPHS)
endif()
if (INCLUDE_TREES)
    target_link_libraries(Test PUBLIC Trees)
    target_compile_definitions(Test PUBLIC TEST_TREES)
endif()